y.output
Terminaux inutilisés dans la grammaire

   DOUBLE
   DOUBLE_T
   FOR
   WHILE


État 61 conflits: 2 décalage/réduction


Grammaire

    0 $accept: code $end

    1 code: function
    2     | '\n'
    3     | %empty

    4 function: INTEGER_T ID '(' ')' '{' body '}'

    5 body: ligne body
    6     | %empty

    7 ligne: instruction
    8      | condition
    9      | '\n'
   10      | ';'

   11 instruction: pre_type INTEGER_T ID ';'
   12            | pre_type INTEGER_T ID '=' operation ';'
   13            | '+' '+' ID
   14            | ID '+' '+'
   15            | '-' '-' ID
   16            | ID '-' '-'
   17            | ID '=' operation ';'
   18            | ID affectation_op '=' operation

   19 pre_type: CONST
   20         | %empty

   21 condition: IF '(' boolean ')' instruction condition_suite
   22          | IF '(' boolean ')' '\n' instruction condition_suite
   23          | IF '(' boolean ')' instruction
   24          | IF '(' boolean ')' '{' body '}' condition_suite

   25 boolean: operation '=' '=' operation
   26        | operation '!' '=' operation
   27        | operation '<' '=' operation
   28        | operation '>' '=' operation
   29        | operation '<' operation
   30        | operation '>' operation
   31        | operation AND operation
   32        | operation OR operation
   33        | '!' operation
   34        | operation

   35 condition_suite: ELSE '{' body '}'
   36                | ELSE instruction
   37                | ELSE condition

   38 affectation_op: '+'
   39               | '-'
   40               | '*'
   41               | '/'

   42 operation: '(' operation ')'
   43          | operation '+' operation
   44          | operation '*' operation
   45          | operation '/' operation
   46          | operation '-' operation
   47          | INTEGER
   48          | ID


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'\n' (10) 2 9 22
'!' (33) 26 33
'(' (40) 4 21 22 23 24 42
')' (41) 4 21 22 23 24 42
'*' (42) 40 44
'+' (43) 13 14 38 43
'-' (45) 15 16 39 46
'/' (47) 41 45
';' (59) 10 11 12 17
'<' (60) 27 29
'=' (61) 12 17 18 25 26 27 28
'>' (62) 28 30
'{' (123) 4 24 35
'}' (125) 4 24 35
error (256)
INTEGER (258) 47
DOUBLE (259)
INTEGER_T (260) 4 11 12
DOUBLE_T (261)
CONST (262) 19
IF (263) 21 22 23 24
ELSE (264) 35 36 37
FOR (265)
WHILE (266)
AND (267) 31
OR (268) 32
ID (269) 4 11 12 13 14 15 16 17 18 48


Non-terminaux, suivis des règles où ils apparaissent

$accept (29)
    à gauche: 0
code (30)
    à gauche: 1 2 3, à droite: 0
function (31)
    à gauche: 4, à droite: 1
body (32)
    à gauche: 5 6, à droite: 4 5 24 35
ligne (33)
    à gauche: 7 8 9 10, à droite: 5
instruction (34)
    à gauche: 11 12 13 14 15 16 17 18, à droite: 7 21 22 23 36
pre_type (35)
    à gauche: 19 20, à droite: 11 12
condition (36)
    à gauche: 21 22 23 24, à droite: 8 37
boolean (37)
    à gauche: 25 26 27 28 29 30 31 32 33 34, à droite: 21 22 23 24
condition_suite (38)
    à gauche: 35 36 37, à droite: 21 22 24
affectation_op (39)
    à gauche: 38 39 40 41, à droite: 18
operation (40)
    à gauche: 42 43 44 45 46 47 48, à droite: 12 17 18 25 26 27 28
    29 30 31 32 33 34 42 43 44 45 46


État 0

    0 $accept: . code $end

    INTEGER_T  décalage et aller à l'état 1
    '\n'       décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 3 (code)

    code      aller à l'état 3
    function  aller à l'état 4


État 1

    4 function: INTEGER_T . ID '(' ')' '{' body '}'

    ID  décalage et aller à l'état 5


État 2

    2 code: '\n' .

    $défaut  réduction par utilisation de la règle 2 (code)


État 3

    0 $accept: code . $end

    $end  décalage et aller à l'état 6


État 4

    1 code: function .

    $défaut  réduction par utilisation de la règle 1 (code)


État 5

    4 function: INTEGER_T ID . '(' ')' '{' body '}'

    '('  décalage et aller à l'état 7


État 6

    0 $accept: code $end .

    $défaut  accepter


État 7

    4 function: INTEGER_T ID '(' . ')' '{' body '}'

    ')'  décalage et aller à l'état 8


État 8

    4 function: INTEGER_T ID '(' ')' . '{' body '}'

    '{'  décalage et aller à l'état 9


État 9

    4 function: INTEGER_T ID '(' ')' '{' . body '}'

    '+'    décalage et aller à l'état 10
    '-'    décalage et aller à l'état 11
    CONST  décalage et aller à l'état 12
    IF     décalage et aller à l'état 13
    ID     décalage et aller à l'état 14
    '\n'   décalage et aller à l'état 15
    ';'    décalage et aller à l'état 16

    INTEGER_T  réduction par utilisation de la règle 20 (pre_type)
    $défaut   réduction par utilisation de la règle 6 (body)

    body         aller à l'état 17
    ligne        aller à l'état 18
    instruction  aller à l'état 19
    pre_type     aller à l'état 20
    condition    aller à l'état 21


État 10

   13 instruction: '+' . '+' ID

    '+'  décalage et aller à l'état 22


État 11

   15 instruction: '-' . '-' ID

    '-'  décalage et aller à l'état 23


État 12

   19 pre_type: CONST .

    $défaut  réduction par utilisation de la règle 19 (pre_type)


État 13

   21 condition: IF . '(' boolean ')' instruction condition_suite
   22          | IF . '(' boolean ')' '\n' instruction condition_suite
   23          | IF . '(' boolean ')' instruction
   24          | IF . '(' boolean ')' '{' body '}' condition_suite

    '('  décalage et aller à l'état 24


État 14

   14 instruction: ID . '+' '+'
   16            | ID . '-' '-'
   17            | ID . '=' operation ';'
   18            | ID . affectation_op '=' operation

    '+'  décalage et aller à l'état 25
    '*'  décalage et aller à l'état 26
    '-'  décalage et aller à l'état 27
    '/'  décalage et aller à l'état 28
    '='  décalage et aller à l'état 29

    affectation_op  aller à l'état 30


État 15

    9 ligne: '\n' .

    $défaut  réduction par utilisation de la règle 9 (ligne)


État 16

   10 ligne: ';' .

    $défaut  réduction par utilisation de la règle 10 (ligne)


État 17

    4 function: INTEGER_T ID '(' ')' '{' body . '}'

    '}'  décalage et aller à l'état 31


État 18

    5 body: ligne . body

    '+'    décalage et aller à l'état 10
    '-'    décalage et aller à l'état 11
    CONST  décalage et aller à l'état 12
    IF     décalage et aller à l'état 13
    ID     décalage et aller à l'état 14
    '\n'   décalage et aller à l'état 15
    ';'    décalage et aller à l'état 16

    INTEGER_T  réduction par utilisation de la règle 20 (pre_type)
    $défaut   réduction par utilisation de la règle 6 (body)

    body         aller à l'état 32
    ligne        aller à l'état 18
    instruction  aller à l'état 19
    pre_type     aller à l'état 20
    condition    aller à l'état 21


État 19

    7 ligne: instruction .

    $défaut  réduction par utilisation de la règle 7 (ligne)


État 20

   11 instruction: pre_type . INTEGER_T ID ';'
   12            | pre_type . INTEGER_T ID '=' operation ';'

    INTEGER_T  décalage et aller à l'état 33


État 21

    8 ligne: condition .

    $défaut  réduction par utilisation de la règle 8 (ligne)


État 22

   13 instruction: '+' '+' . ID

    ID  décalage et aller à l'état 34


État 23

   15 instruction: '-' '-' . ID

    ID  décalage et aller à l'état 35


État 24

   21 condition: IF '(' . boolean ')' instruction condition_suite
   22          | IF '(' . boolean ')' '\n' instruction condition_suite
   23          | IF '(' . boolean ')' instruction
   24          | IF '(' . boolean ')' '{' body '}' condition_suite

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38
    '!'      décalage et aller à l'état 39

    boolean    aller à l'état 40
    operation  aller à l'état 41


État 25

   14 instruction: ID '+' . '+'
   38 affectation_op: '+' .

    '+'  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 38 (affectation_op)


État 26

   40 affectation_op: '*' .

    $défaut  réduction par utilisation de la règle 40 (affectation_op)


État 27

   16 instruction: ID '-' . '-'
   39 affectation_op: '-' .

    '-'  décalage et aller à l'état 43

    $défaut  réduction par utilisation de la règle 39 (affectation_op)


État 28

   41 affectation_op: '/' .

    $défaut  réduction par utilisation de la règle 41 (affectation_op)


État 29

   17 instruction: ID '=' . operation ';'

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 44


État 30

   18 instruction: ID affectation_op . '=' operation

    '='  décalage et aller à l'état 45


État 31

    4 function: INTEGER_T ID '(' ')' '{' body '}' .

    $défaut  réduction par utilisation de la règle 4 (function)


État 32

    5 body: ligne body .

    $défaut  réduction par utilisation de la règle 5 (body)


État 33

   11 instruction: pre_type INTEGER_T . ID ';'
   12            | pre_type INTEGER_T . ID '=' operation ';'

    ID  décalage et aller à l'état 46


État 34

   13 instruction: '+' '+' ID .

    $défaut  réduction par utilisation de la règle 13 (instruction)


État 35

   15 instruction: '-' '-' ID .

    $défaut  réduction par utilisation de la règle 15 (instruction)


État 36

   47 operation: INTEGER .

    $défaut  réduction par utilisation de la règle 47 (operation)


État 37

   48 operation: ID .

    $défaut  réduction par utilisation de la règle 48 (operation)


État 38

   42 operation: '(' . operation ')'

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 47


État 39

   33 boolean: '!' . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 48


État 40

   21 condition: IF '(' boolean . ')' instruction condition_suite
   22          | IF '(' boolean . ')' '\n' instruction condition_suite
   23          | IF '(' boolean . ')' instruction
   24          | IF '(' boolean . ')' '{' body '}' condition_suite

    ')'  décalage et aller à l'état 49


État 41

   25 boolean: operation . '=' '=' operation
   26        | operation . '!' '=' operation
   27        | operation . '<' '=' operation
   28        | operation . '>' '=' operation
   29        | operation . '<' operation
   30        | operation . '>' operation
   31        | operation . AND operation
   32        | operation . OR operation
   34        | operation .
   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53
    AND  décalage et aller à l'état 54
    OR   décalage et aller à l'état 55
    '='  décalage et aller à l'état 56
    '!'  décalage et aller à l'état 57
    '<'  décalage et aller à l'état 58
    '>'  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 34 (boolean)


État 42

   14 instruction: ID '+' '+' .

    $défaut  réduction par utilisation de la règle 14 (instruction)


État 43

   16 instruction: ID '-' '-' .

    $défaut  réduction par utilisation de la règle 16 (instruction)


État 44

   17 instruction: ID '=' operation . ';'
   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53
    ';'  décalage et aller à l'état 60


État 45

   18 instruction: ID affectation_op '=' . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 61


État 46

   11 instruction: pre_type INTEGER_T ID . ';'
   12            | pre_type INTEGER_T ID . '=' operation ';'

    ';'  décalage et aller à l'état 62
    '='  décalage et aller à l'état 63


État 47

   42 operation: '(' operation . ')'
   43          | operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53
    ')'  décalage et aller à l'état 64


État 48

   33 boolean: '!' operation .
   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 33 (boolean)


État 49

   21 condition: IF '(' boolean ')' . instruction condition_suite
   22          | IF '(' boolean ')' . '\n' instruction condition_suite
   23          | IF '(' boolean ')' . instruction
   24          | IF '(' boolean ')' . '{' body '}' condition_suite

    '+'    décalage et aller à l'état 10
    '-'    décalage et aller à l'état 11
    CONST  décalage et aller à l'état 12
    ID     décalage et aller à l'état 14
    '\n'   décalage et aller à l'état 65
    '{'    décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 20 (pre_type)

    instruction  aller à l'état 67
    pre_type     aller à l'état 20


État 50

   43 operation: operation '+' . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 68


État 51

   44 operation: operation '*' . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 69


État 52

   46 operation: operation '-' . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 70


État 53

   45 operation: operation '/' . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 71


État 54

   31 boolean: operation AND . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 72


État 55

   32 boolean: operation OR . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 73


État 56

   25 boolean: operation '=' . '=' operation

    '='  décalage et aller à l'état 74


État 57

   26 boolean: operation '!' . '=' operation

    '='  décalage et aller à l'état 75


État 58

   27 boolean: operation '<' . '=' operation
   29        | operation '<' . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38
    '='      décalage et aller à l'état 76

    operation  aller à l'état 77


État 59

   28 boolean: operation '>' . '=' operation
   30        | operation '>' . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38
    '='      décalage et aller à l'état 78

    operation  aller à l'état 79


État 60

   17 instruction: ID '=' operation ';' .

    $défaut  réduction par utilisation de la règle 17 (instruction)


État 61

   18 instruction: ID affectation_op '=' operation .
   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53

    '+'       [réduction par utilisation de la règle 18 (instruction)]
    '-'       [réduction par utilisation de la règle 18 (instruction)]
    $défaut  réduction par utilisation de la règle 18 (instruction)


État 62

   11 instruction: pre_type INTEGER_T ID ';' .

    $défaut  réduction par utilisation de la règle 11 (instruction)


État 63

   12 instruction: pre_type INTEGER_T ID '=' . operation ';'

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 80


État 64

   42 operation: '(' operation ')' .

    $défaut  réduction par utilisation de la règle 42 (operation)


État 65

   22 condition: IF '(' boolean ')' '\n' . instruction condition_suite

    '+'    décalage et aller à l'état 10
    '-'    décalage et aller à l'état 11
    CONST  décalage et aller à l'état 12
    ID     décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 20 (pre_type)

    instruction  aller à l'état 81
    pre_type     aller à l'état 20


État 66

   24 condition: IF '(' boolean ')' '{' . body '}' condition_suite

    '+'    décalage et aller à l'état 10
    '-'    décalage et aller à l'état 11
    CONST  décalage et aller à l'état 12
    IF     décalage et aller à l'état 13
    ID     décalage et aller à l'état 14
    '\n'   décalage et aller à l'état 15
    ';'    décalage et aller à l'état 16

    INTEGER_T  réduction par utilisation de la règle 20 (pre_type)
    $défaut   réduction par utilisation de la règle 6 (body)

    body         aller à l'état 82
    ligne        aller à l'état 18
    instruction  aller à l'état 19
    pre_type     aller à l'état 20
    condition    aller à l'état 21


État 67

   21 condition: IF '(' boolean ')' instruction . condition_suite
   23          | IF '(' boolean ')' instruction .

    ELSE  décalage et aller à l'état 83

    $défaut  réduction par utilisation de la règle 23 (condition)

    condition_suite  aller à l'état 84


État 68

   43 operation: operation . '+' operation
   43          | operation '+' operation .
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 43 (operation)


État 69

   43 operation: operation . '+' operation
   44          | operation . '*' operation
   44          | operation '*' operation .
   45          | operation . '/' operation
   46          | operation . '-' operation

    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 44 (operation)


État 70

   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation
   46          | operation '-' operation .

    '/'  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 46 (operation)


État 71

   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   45          | operation '/' operation .
   46          | operation . '-' operation

    $défaut  réduction par utilisation de la règle 45 (operation)


État 72

   31 boolean: operation AND operation .
   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 31 (boolean)


État 73

   32 boolean: operation OR operation .
   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 32 (boolean)


État 74

   25 boolean: operation '=' '=' . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 85


État 75

   26 boolean: operation '!' '=' . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 86


État 76

   27 boolean: operation '<' '=' . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 87


État 77

   29 boolean: operation '<' operation .
   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 29 (boolean)


État 78

   28 boolean: operation '>' '=' . operation

    INTEGER  décalage et aller à l'état 36
    ID       décalage et aller à l'état 37
    '('      décalage et aller à l'état 38

    operation  aller à l'état 88


État 79

   30 boolean: operation '>' operation .
   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 30 (boolean)


État 80

   12 instruction: pre_type INTEGER_T ID '=' operation . ';'
   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53
    ';'  décalage et aller à l'état 89


État 81

   22 condition: IF '(' boolean ')' '\n' instruction . condition_suite

    ELSE  décalage et aller à l'état 83

    condition_suite  aller à l'état 90


État 82

   24 condition: IF '(' boolean ')' '{' body . '}' condition_suite

    '}'  décalage et aller à l'état 91


État 83

   35 condition_suite: ELSE . '{' body '}'
   36                | ELSE . instruction
   37                | ELSE . condition

    '+'    décalage et aller à l'état 10
    '-'    décalage et aller à l'état 11
    CONST  décalage et aller à l'état 12
    IF     décalage et aller à l'état 13
    ID     décalage et aller à l'état 14
    '{'    décalage et aller à l'état 92

    $défaut  réduction par utilisation de la règle 20 (pre_type)

    instruction  aller à l'état 93
    pre_type     aller à l'état 20
    condition    aller à l'état 94


État 84

   21 condition: IF '(' boolean ')' instruction condition_suite .

    $défaut  réduction par utilisation de la règle 21 (condition)


État 85

   25 boolean: operation '=' '=' operation .
   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 25 (boolean)


État 86

   26 boolean: operation '!' '=' operation .
   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 26 (boolean)


État 87

   27 boolean: operation '<' '=' operation .
   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 27 (boolean)


État 88

   28 boolean: operation '>' '=' operation .
   43 operation: operation . '+' operation
   44          | operation . '*' operation
   45          | operation . '/' operation
   46          | operation . '-' operation

    '+'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '-'  décalage et aller à l'état 52
    '/'  décalage et aller à l'état 53
